[tool.poetry]
name = "urdfenvs"
version = "0.2.1"
description = "Simple simulation environment for robots, based on the urdf files."
authors = ["Gijs Groote <gijsgroote@hotmail.com>","Max Spahn <m.spahn@tudelft.nl>"]

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
pybullet = "^3.2.1"
gym = "^0.21.0"
numpy = "^1.19.0"
pytest = "^6.2.5"
# use urdfpy unpinned version, see https://github.com/mmatl/urdfpy/pull/26
urdfpy = {git="https://github.com/GijsGroote/urdfpy.git",  rev="master"}
scipy = "^1.9.0" 
networkx = "^2.7.0"
Sphinx = { version = "4.2.0", optional = true }
sphinx-rtd-theme = { version = "1.0.0", optional = true }
sphinxcontrib-napoleon = { version = "0.7", optional = true }
# motion-planning-scenes = {git="https://github.com/GijsGroote/motion_planning_scenes.git",  rev="develop"}
motion-planning-scenes = {path="../motion_planning_scenes"}
pynput = {version = "^1.7.6", optional = true}
multiprocess = {version = "^0.70.12", optional = true}

[tool.poetry.extras]
scenes = ["motion-planning-scenes"]
keyboard = ["pynput", "multiprocess"]
docs = ["Sphinx", "sphinx-rtd-theme", "sphinxcontrib-napoleon"]

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
